--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,6 +1,8 @@
 doctype html
 html(lang="en")
     head
+        link(rel="stylesheet" type="text/css" href="/css/reset.css")
+        link(rel="stylesheet" type="text/css" href="/css/base.css")
     body
         h1 test
         p test2
