--- a/src/views/users/register.pug
+++ b/src/views/users/register.pug
@@ -1,2 +1,27 @@
-form()
-    input.edit(type="text" name="username")
+doctype html
+html(lang="en")
+    head
+        link(rel="stylesheet" type="text/css" href="/css/reset.css")
+        link(rel="stylesheet" type="text/css" href="/css/base.css")
+        link(rel="stylesheet" type="text/css" href="/css/page.css")
+        link(rel="stylesheet" type="text/css" href="/css/auth.css")
+        link(rel="stylesheet" type="text/css" href="/css/colors.css")
+        link(rel="stylesheet" type="text/css" href="/css/fonts.css")
+    body
+        div(class="page background-color")
+            div(class="centered-column")
+                div(class="auth-container")
+                    div(class="auth-header")
+                        p Limit Handler
+                        img(src="/img/logo.svg" alt="Hourglass...")
+                    form(class="auth-form")
+                        div(class="input-container")
+                            p Email
+                            input.edit(type="text" name="username" placeholder="Email")
+                        div(class="input-container")
+                            p Username
+                            input.edit(type="text" name="email" placeholder="Username")
+                        div(class="input-container")
+                            p Password
+                            input.edit(type="password" name="password" placeholder="Password")
+            //- footer()
