--- a/src/assets/css/page.css
+++ b/src/assets/css/page.css
@@ -1,6 +1,59 @@
 .page{
     width: 100%;
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.page-content{
+    width: 100%;
+    min-width: 600px;
+    flex-grow: 1;
+}
+
+.site-header{
+    width: 100%;
+    height: 70px;
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    flex-grow: 0;
+
+    padding: 0px 25px;
+    border-bottom: 1px solid #94a3b8;
+}
+
+.site-header-left{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.site-header-left p{
+    font-size: 26px;
+    padding-right: 10px;
+}
+
+.site-header-right img{
+    width: 32px;
+}
+
+.site-footer{
+    width: 100%;
+    height: 70px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: top;
+    
+    flex-grow: 0;
+
+    padding: 0px 25px;
+    /* border-top: 1px solid #94a3b8; */
 }
 
 .centered-column{
