set up pug layout, have working redirect upon submission of registration form with bad data

--- a/src/assets/css/auth.css
+++ b/src/assets/css/auth.css
@@ -1,5 +1,5 @@
 .auth-container{
-    height: 300px;
+    height: 360px;
     width: 300px;
 
     display: flex;
@@ -32,11 +32,11 @@
 
 .auth-form .input-container{
     width: 100%;
-    height: 60px;
-    margin: 10px 0px;
+    height: 70px;
+    margin: 10px 0px 0px 0px;
 }
 
-.auth-form .input-container p{
+.auth-form .input-container .auth-form-label{
     width: 100%;
     margin: 5px 0px;
 }
@@ -49,4 +49,27 @@
 
     border-radius: 3px;
     border: 1px solid #3f3f46;
+}
+
+.auth-form button{
+    width: 100%;
+    height: 40px;
+
+    margin: 30px 0px 0px 0px;
+
+    border-radius: 5px;
+    border: 1px solid #3f3f46;
+}
+
+.auth-form button p{
+    font-size: 16px;
+}
+
+.auth-form .auth-form-error-message{
+    height: 15px;
+    font-size: 12px;
+
+    margin-top: 5px;
+    margin-left: 5px;
+    color: #ef4444;
 }
