--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -49,3 +49,19 @@ input{
     padding-block: 0px;
     padding-inline: 0px;
 }
+button{
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    overflow: visible;
+
+    background: transparent;
+
+    /* Corrects font smoothing for webkit */
+    -webkit-font-smoothing: inherit;
+    -moz-osx-font-smoothing: inherit;
+
+    /* Corrects inability to style clickable `input` types in iOS */
+    -webkit-appearance: none;
+}
