--- a/src/views/users/register.pug
+++ b/src/views/users/register.pug
@@ -1,36 +1,24 @@
-extends ../layout.pug
+extends ../layouts/main.pug
 
 block content
+    
+    div(class="page-content")
+        div(class="centered-column")
+            div(class="auth-container")
+                div(class="auth-header")
+                    p Sign up
+                form(class="auth-form" hx-post="/users/register" hx-target=".page")
+                    div(class="input-container")
+                        p(class="auth-form-label") Email
+                        input.edit(type="text" name="email" placeholder="Email")
+                    div(class="input-container")
+                        p(class="auth-form-label") Username
+                        input.edit(type="text" name="userName" placeholder="Username")
+                    div(class="input-container")
+                        p(class="auth-form-label") Password
+                        input.edit(type="password" name="passwordInput" placeholder="Password")
+                    button(class="slate-400")
+                        p Submit
+                    p(class="auth-form-error-message") #{errMessage}
 
-    div(class="page background-color")
-        div(class="site-header")
-            div(class="site-header-left")
-                p Limit Handler
-                img(src="/img/logo.svg" alt="Hourglass...")
-            div(class="site-header-right")
-                img(src="/img/question-mark.svg" alt="Question...")
-        div(class="page-content")
-            div(class="centered-column")
-                div(class="auth-container")
-                    div(class="auth-header")
-                        p Sign up
-                    form(class="auth-form" hx-post="/users/register" hx-target=".page")
-                        div(class="input-container")
-                            p(class="auth-form-label") Email
-                            input.edit(type="text" name="email" placeholder="Email")
-                        div(class="input-container")
-                            p(class="auth-form-label") Username
-                            input.edit(type="text" name="userName" placeholder="Username")
-                        div(class="input-container")
-                            p(class="auth-form-label") Password
-                            input.edit(type="password" name="passwordInput" placeholder="Password")
-                        button(class="slate-400")
-                            p Submit
-                        p(class="auth-form-error-message") #{errMessage}
-
-
-        div(class="site-footer")
-            div(class="site-footer-left")
-            div(class="site-footer-right")
-                a(href="https://github.com/willmarino/limit-handler-api") Check out the code here :)
 
