--- a/src/views/auth/register.pug
+++ b/src/views/auth/register.pug
@@ -7,7 +7,7 @@ block content
             div(class="auth-container")
                 div(class="auth-header")
                     p Sign up
-                form(class="auth-form" hx-post="/users/register" hx-target=".page")
+                form(class="auth-form" hx-post="/auth/register" hx-target=".page")
                     div(class="input-container")
                         p(class="auth-form-label") Email
                         input.edit(type="text" name="email" placeholder="Email")
