memberships are now primary or not primary

--- a/src/views/users/lobby.pug
+++ b/src/views/users/lobby.pug
@@ -4,4 +4,4 @@ block content
 
     div(class="page-content")
         div(class="centered-column")
-            p Hello #{userName}, you are successfully authenticated :)
+            p Hello #{userInfo.user.name}, you are successfully authenticated :)
