changed css for main layout, header and footer now glued to top and bottom of parent, not using flex grow for page body because it is incompatible with overflow scroll

--- a/src/views/users/lobby.pug
+++ b/src/views/users/lobby.pug
@@ -3,5 +3,5 @@ extends ../layouts/main.pug
 block content
 
     div(class="page-content")
-        div(class="centered-column")
+        div(class="scroll")
             p Hello #{userInfo.user.name}, you are successfully authenticated :)
