--- a/src/assets/css/page.css
+++ b/src/assets/css/page.css
@@ -9,12 +9,18 @@
 .page-content{
     width: 100%;
     min-width: 600px;
-    flex-grow: 1;
+    height: 100%;
+
+    padding: 70px 0px;
+
+    /* flex-grow: 1; */
 }
 
 .site-header{
     width: 100%;
     height: 70px;
+
+    position: absolute;
     
     display: flex;
     justify-content: space-between;
@@ -46,6 +52,10 @@
     width: 100%;
     height: 70px;
 
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+
     display: flex;
     justify-content: space-between;
     align-items: top;
@@ -56,6 +66,11 @@
     /* border-top: 1px solid #94a3b8; */
 }
 
+.site-footer-right{
+    margin-right: 50px;
+}
+
+/* page type styling */
 .centered-column{
     width: 100%;
     height: 100%;
@@ -63,4 +78,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.scroll{
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
+
+    padding: 40px 40px 0px 40px;
+
+    overflow-y: scroll;
 }
