messing with colors and shadows

--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -1,9 +1,16 @@
 .secondary-color { 
-
+    /* from pallete gen */
+    /* background: #A6E1FA;  */
+    /* from taiwlind */
+    background: #cbd5e1;
 }
 	
 .primary-color { 
-    background: #1e293b;
+    /* from pallete gen */
+    /* background: #0A2472; */
+    /* from taiwlind */
+    /* background: #0E6BA8; */
+
 }
 
 .background-color { 
