--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -5,7 +5,9 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="/css/base.css")
         link(rel="stylesheet" type="text/css" href="/css/page.css")
         link(rel="stylesheet" type="text/css" href="/css/auth.css")
+        link(rel="stylesheet" type="text/css" href="/css/lobby.css")
         link(rel="stylesheet" type="text/css" href="/css/colors.css")
+        link(rel="stylesheet" type="text/css" href="/css/shadows.css")
         link(rel="stylesheet" type="text/css" href="/css/fonts.css")
     body
         
@@ -13,7 +15,7 @@ html(lang="en")
         div(class="page background-color")
 
             //- footer
-            div(class="site-header")
+            div(class="site-header secondary-shadow")
                 div(class="site-header-left")
                     p Limit Handler
                     img(src="/img/logo.svg" alt="Hourglass...")
@@ -23,10 +25,7 @@ html(lang="en")
             //- actual page content
             block content
 
-            //- footer
-            div(class="site-footer")
-                div(class="site-footer-left")
-                div(class="site-footer-right")
-                    a(href="https://github.com/willmarino/limit-handler-api") Check out the code here :)
+            //- footer elements
+            a(href="https://github.com/willmarino/limit-handler-api" class="site-footer-github secondary-color primary-shadow") Check out the code here :)
 
         script(src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous")
