--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -65,3 +65,7 @@ button{
     /* Corrects inability to style clickable `input` types in iOS */
     -webkit-appearance: none;
 }
+a{
+    color: black;
+    text-decoration: none;
+}
