bit of formatting, moving on to org creation

--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -4,6 +4,7 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="/css/reset.css")
         link(rel="stylesheet" type="text/css" href="/css/base.css")
         link(rel="stylesheet" type="text/css" href="/css/page.css")
+        link(rel="stylesheet" type="text/css" href="/css/buttons.css")
         link(rel="stylesheet" type="text/css" href="/css/auth.css")
         link(rel="stylesheet" type="text/css" href="/css/lobby.css")
         link(rel="stylesheet" type="text/css" href="/css/colors.css")
