--- a/src/assets/css/lobby.css
+++ b/src/assets/css/lobby.css
@@ -1,5 +1,3 @@
-
-
 .lobby{
     display: flex;
 
@@ -7,7 +5,6 @@
 }
 
 .lobby-left{
-    /* width: 400px; */
     min-width: 400px;
     min-height: 800px;
     
@@ -18,26 +15,23 @@
     border-radius: 5px;
 }
 
-.lobby-left-user-name{
-    width: 150px;
-    height: 30px;
-
-    border-radius: 5px;
+.lobby-left-top{
+    
 }
 
-.lobby-left-user-name p{
+.lobby-left-bottom{
+    padding-top: 20px;
+}
+
+#no-org-warning{
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.lobby-button p{
     text-align: center;
     line-height: 30px;
     font-size: 14px;
-}
-
-.lobby-left-org-name{
-    width: 150px;
-    height: 30px;
-
-    border-radius: 5px;
-
-    background: green;
 }
 
 .lobby-right{
@@ -46,6 +40,15 @@
 
     padding: 20px;
     margin-left: 100px;
+
+    border-radius: 5px;
+}
+
+.lobby-button{
+    width: 150px;
+    height: 30px;
+
+    margin-bottom: 20px;
 
     border-radius: 5px;
 }
