added logout, switched tests over from using jwts to session info

--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -22,6 +22,7 @@ html(lang="en")
                     img(src="/img/logo.svg" alt="Hourglass...")
                 div(class="site-header-right")
                     img(src="/img/question-mark.svg" alt="Question...")
+                    img(src="/img/gear.svg" alt="gear" hx-post="/auth/logout" hx-target=".page")
 
             //- actual page content
             block content
