added HX-Push-Url headers to login, register, and show routes, so that the browser window is always up to date with the content being displayed

--- a/src/assets/css/buttons.css
+++ b/src/assets/css/buttons.css
@@ -1,4 +1,7 @@
 .clickable:hover{
-    cursor: pointer;
-    
+    cursor: pointer;    
+}
+
+.secondary-color.clickable:hover{
+    background: #94a3b8;
 }
