--- a/src/views/auth/login.pug
+++ b/src/views/auth/login.pug
@@ -7,7 +7,7 @@ block content
             div(class="auth-container login-container")
                 div(class="auth-header")
                     p(class="auth-header-label") Login
-                    p(class="auth-header-nav" hx-get="/auth/register" hx-target=".page") Sign Up Instead
+                    a(class="auth-header-nav" href="/auth/register") Sign Up Instead
                 form(class="auth-form" hx-post="/auth/login" hx-target=".page")
                     div(class="input-container")
                         p(class="auth-form-label") Email
@@ -15,7 +15,7 @@ block content
                     div(class="input-container")
                         p(class="auth-form-label") Password
                         input.edit(class="secondary-shadow" type="password" name="passwordInput" placeholder="Password")
-                    button(class="secondary-color secondary-shadow")
+                    button(class="secondary-color secondary-shadow clickable")
                         p Submit
                     p(class="auth-form-error-message") #{errMessage}
 
