generalizing a bunch of input and form styling which was only being applied to auth forms

--- a/src/assets/css/org_creation.css
+++ b/src/assets/css/org_creation.css
@@ -1,17 +1,11 @@
-.auth-container{
+
+.create-org-form-container{
     width: 300px;
+    height: 300px;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     margin: 0 0 120px 0;
-}
-
-.register-container{
-    height: 380px;
-}
-
-.login-container{
-    height: 300px;
 }
