--- a/src/assets/css/buttons.css
+++ b/src/assets/css/buttons.css
@@ -5,3 +5,16 @@
 .secondary-color.clickable:hover{
     background: #94a3b8;
 }
+
+.submit-button{
+    width: 100%;
+    height: 40px;
+
+    margin: 30px 0px 0px 0px;
+
+    border-radius: 5px;
+}
+
+.submit-button p{
+    font-size: 14px;
+}
