--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -69,7 +69,11 @@ a{
     color: black;
     text-decoration: none;
 }
-input:focus
-{
+
+input:focus, select:focus{
 	outline:0;
+}
+
+select{
+    border: none;
 }
