--- a/src/views/auth/register.pug
+++ b/src/views/auth/register.pug
@@ -5,21 +5,20 @@ block content
     div(class="page-content")
         div(class="centered-column")
             div(class="auth-container register-container")
-                div(class="auth-header")
-                    p(class="auth-header-label") Sign up
-                    a(class="auth-header-nav" href="/auth/login") Login Instead
+                div(class="form-container-header")
+                    p(class="form-container-header-label") Sign up
+                    a(class="form-container-header-nav" href="/auth/login") Login Instead
                 form(class="auth-form" hx-post="/auth/register" hx-target=".page")
                     div(class="input-container")
-                        p(class="auth-form-label") Email
+                        p(class="form-label") Email
                         input.edit(class="secondary-shadow" type="text" name="email" placeholder="Email" value=email)
                     div(class="input-container")
-                        p(class="auth-form-label") Username
+                        p(class="form-label") Username
                         input.edit(class="secondary-shadow" type="text" name="userName" placeholder="Username" value=userName)
                     div(class="input-container")
-                        p(class="auth-form-label") Password
+                        p(class="form-label") Password
                         input.edit(class="secondary-shadow" type="password" name="passwordInput" placeholder="Password" value=passwordInput)
-                    button(class="secondary-color secondary-shadow clickable")
+                    button(class="submit-button secondary-color secondary-shadow clickable")
                         p Submit
-                    p(class="auth-form-error-message") #{errMessage}
-
+                    p(class="form-error-message") #{errMessage}
 
