--- a/src/views/users/lobby.pug
+++ b/src/views/users/lobby.pug
@@ -15,7 +15,7 @@ block content
                             p #{userInfo.organizations[0].name}
                     if userInfo.organizations.length === 0
                         p(id="no-org-warning") You are not a member of any organizations...
-                        div(class="lobby-button secondary-color secondary-shadow clickable")
-                                p Create Org
+                        div(class="lobby-button secondary-color secondary-shadow clickable" hx-get="/organizations/create" hx-target=".page")
+                                p Create New Org
                 div(class="lobby-right primary-color primary-shadow")
                     p projects info space
