--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -17,14 +17,9 @@
     background: #f9fafb;
 }
 
-.content-color { 
 
-}
-
-
-
-/*  */
-
-.slate-400{
-    background: #94a3b8;
+.soft-text{
+    /* color: #111827; */
+    color: #4b5563;
+    /* color: #6b7280; */
 }
