--- a/src/assets/css/org_creation.css
+++ b/src/assets/css/org_creation.css
@@ -1,11 +1,40 @@
 
 .create-org-form-container{
     width: 300px;
-    height: 300px;
+    height: 480px;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     margin: 0 0 120px 0;
+}
+
+.choice{
+    margin-bottom: 10px;
+}
+
+.choice-selector{
+    width: 100%;
+    margin: 15px 0px;
+}
+
+.choice-button{
+    width: 100%;
+    height: 35px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin: 5px 0px;
+    padding: 0px 10px;
+
+    border-radius: 5px;
+}
+
+.choice-description{
+    padding: 0px 10px;
+    
+    font-size: 14px;
 }
