--- a/src/assets/css/forms.css
+++ b/src/assets/css/forms.css
@@ -69,3 +69,39 @@ form{
 .input-container input:focus{
     border: 1px solid #3f3f46;
 }
+
+/* choices */
+.choice{
+    margin-bottom: 10px;
+}
+
+.choice-selector{
+    width: 100%;
+    margin: 15px 0px;
+}
+
+.choice-button{
+    width: 100%;
+    height: 35px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin: 5px 0px;
+    padding: 0px 10px;
+
+    border-radius: 5px;
+}
+
+.choice-button:hover {
+    cursor: pointer;
+
+    background: #cbd5e1;
+}
+
+.choice-description{
+    padding: 0px 10px;
+    
+    font-size: 13px;
+}
