--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -4,6 +4,8 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="/css/reset.css")
         link(rel="stylesheet" type="text/css" href="/css/base.css")
         link(rel="stylesheet" type="text/css" href="/css/page.css")
+        link(rel="stylesheet" type="text/css" href="/css/footer.css")
+        link(rel="stylesheet" type="text/css" href="/css/header.css")
         link(rel="stylesheet" type="text/css" href="/css/buttons.css")
         link(rel="stylesheet" type="text/css" href="/css/forms.css")
         link(rel="stylesheet" type="text/css" href="/css/auth.css")
@@ -21,10 +23,10 @@ html(lang="en")
             div(class="site-header secondary-shadow")
                 button(class="site-header-left clickable" hx-get="/auth/login" hx-target=".page")
                     p Limit Handler
-                    img(src="/img/logo.svg" alt="Hourglass...")
+                    img(src="/img/logo/clock_24.png")
                 div(class="site-header-right")
-                    img(src="/img/question-mark.svg" alt="Question...")
-                    img(src="/img/gear.svg" alt="gear" hx-post="/auth/logout" hx-target=".page")
+                    button(class="secondary-color secondary-shadow") Questions
+                    button(class="secondary-color secondary-shadow" hx-post="/auth/logout" hx-target=".page") Logout
 
             //- actual page content
             block content
