setting up separate validators file

--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -20,7 +20,7 @@ html(lang="en")
         div(class="page background-color")
 
             //- header
-            div(class="site-header secondary-shadow")
+            div(class="site-header soft-shadow")
                 button(class="site-header-left clickable" hx-get="/auth/login" hx-target=".page")
                     p Limit Handler
                     img(src="/img/logo/clock_24.png")
