--- a/src/views/auth/login.pug
+++ b/src/views/auth/login.pug
@@ -19,4 +19,5 @@ block content
                         p Submit
                     p(class="form-error-message") #{errMessage}
 
-
+block variables
+    - const loggedOut = true;
