--- a/src/views/auth/register.pug
+++ b/src/views/auth/register.pug
@@ -22,3 +22,5 @@ block content
                         p Submit
                     p(class="form-error-message") #{errMessage}
 
+block variables
+    - const loggedOut = true;
