--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,5 +1,6 @@
 *{
-    font-family: "Roboto", serif;
+    /* font-family: "Roboto", serif; */
+    font-family: "Rubik", serif;
 }
 html{
     width: 100vw;
