--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -3,3 +3,7 @@
     src: url("../fonts/roboto/Roboto-Regular.ttf");
 }
 
+@font-face{
+    font-family: "Rubik";
+    src: url("../fonts/rubik/Rubik-Medium.ttf")
+}
