--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -5,5 +5,14 @@
 
 @font-face{
     font-family: "Rubik";
-    src: url("../fonts/rubik/Rubik-Medium.ttf")
+    src: url("../fonts/rubik/Rubik-Regular.ttf")
+    /* src: url("../fonts/rubik/Rubik-Medium.ttf") */
+}
+
+.fs-12{
+    font-size: 12px;
+}
+
+.fs-14{
+    font-size: 14px;
 }
