--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -76,4 +76,13 @@ input:focus, select:focus{
 
 select{
     border: none;
+    margin:0;
+	padding:0;
+	display:inline-block;
+	vertical-align:middle;
+	white-space:normal;
+	background:none;
+	line-height:1;
 }
+
+
